--- a/style.css
+++ b/style.css
@@ -566,9 +566,8 @@ body {
   overflow-x: hidden;
   border-radius: 32px;
 }
-/* TODO: add mobile. may be without flex */
+
 .slider-image {
-  flex: 0 0 100%;
   overflow: hidden;
   display: flex;
   align-items: center;
@@ -577,22 +576,25 @@ body {
 
 .slider-images-block {
   --slideIndex: 0;
+  --slidesCount: 1;
   display: flex;
-  transition: transform 0.5s;
+  transition: transform 0.6s;
   height: 100%;
-  display: flex;
-  transform: transition 0.5s;
-  transform: translateX(calc(var(--slideIndex) * -100%));
+  transform: translateX(calc(var(--slideIndex) * (-100% / var(--slidesCount))));
 }
 
 .slider-images-block img {
-  width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
 .no-transition {
   transition: 0s;
+}
+
+.no-transition label,
+.no-transition button{
+pointer-events: none;
 }
 
 .slider-control-buttons {
@@ -612,6 +614,7 @@ body {
   font-size: 60px;
   max-width: 535px;
   top: 0;
+  cursor: pointer;
 }
 
 .slider-control-buttons label {
@@ -622,6 +625,7 @@ body {
   border-radius: 5px;
   z-index: 5;
   position: absolute;
+  cursor: pointer;
 }
 
 .left {
