change date input to custom text

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
   padding: 0;
   font-family: 'Montserrat', Arial, sans-serif;
   box-sizing: border-box;
+  scroll-behavior: smooth;
   --white-200: #f8f3ff;
   --black-400: #303030;
   --black-600: #333333;
